# ext2-on-Linux

./: CMakeLists.txt  README.md
ext_data/: test修改.txt
include/: ext2.h  fs.h  inode.h
src/: DArray.c  ReadFile.c  buf.c  fs.c  inode.c  test.c
